crates/reddb-server/tests/snapshots/subquery_snapshots__subq_correlated_dangling_dot.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM users u WHERE u.id IN \\\n     (SELECT user_id FROM orders o WHERE o. = u.id)\")"
---
input: "SELECT * FROM users u WHERE u.id IN (SELECT user_id FROM orders o WHERE o. = u.id)"
kind:  Syntax
error: Parse error at 1:76: Unexpected token: = (expected: identifier or type name)
