crates/reddb-server/tests/snapshots/subquery_snapshots__subq_correlated_in_outer_dot_col.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM users u WHERE u.id IN \\\n     (SELECT user_id FROM orders o WHERE o.user_id = u.id)\")"
---
UNEXPECTED OK
input: "SELECT * FROM users u WHERE u.id IN (SELECT user_id FROM orders o WHERE o.user_id = u.id)"
