crates/reddb-server/tests/snapshots/subquery_snapshots__subq_exists_eof_after_keyword.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE EXISTS\")"
---
input: "SELECT * FROM t WHERE EXISTS"
kind:  Syntax
error: Parse error at 1:29: Unexpected token: EOF (expected: =, <>, <, <=, >, >=)
