crates/reddb-server/tests/snapshots/subquery_snapshots__subq_from_eof_after_lparen.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM (\")"
---
input: "SELECT * FROM ("
kind:  Syntax
error: Parse error at 1:16: subquery in FROM must start with SELECT
