crates/reddb-server/tests/snapshots/subquery_snapshots__subq_from_inner_not_select.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM (DELETE FROM t) AS x\")"
---
input: "SELECT * FROM (DELETE FROM t) AS x"
kind:  Syntax
error: Parse error at 1:16: subquery in FROM must start with SELECT
