crates/reddb-server/tests/snapshots/subquery_snapshots__subq_from_unterminated.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM (SELECT id FROM t AS sub\")"
---
input: "SELECT * FROM (SELECT id FROM t AS sub"
kind:  Syntax
error: Parse error at 1:39: Unexpected token: EOF (expected: ))
