crates/reddb-server/tests/snapshots/subquery_snapshots__subq_in_eof_after_lparen.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE id IN (\")"
---
input: "SELECT * FROM t WHERE id IN ("
kind:  Syntax
error: Parse error at 1:30: Unexpected token: EOF (expected: string, number, true, false, null, [, {)
