crates/reddb-server/tests/snapshots/subquery_snapshots__subq_in_unterminated_inner.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE id IN (SELECT id FROM u\")"
---
input: "SELECT * FROM t WHERE id IN (SELECT id FROM u"
kind:  Syntax
error: Parse error at 1:46: Unexpected token: EOF (expected: ))
