crates/reddb-server/tests/snapshots/subquery_snapshots__subq_not_exists_basic.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE NOT EXISTS (SELECT 1 FROM u)\")"
---
input: "SELECT * FROM t WHERE NOT EXISTS (SELECT 1 FROM u)"
kind:  Syntax
error: Parse error at 1:34: Unexpected token: ( (expected: =, <>, <, <=, >, >=)
